onCheck function and conditional styling for correct and wrong answers

--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,18 @@
   border: 1px solid #ccc;
   border-radius: 5px;
  }
- 
+
  /* Styling for the selected answer */
  .answer-selected {
-  background-color: #dff0d8; /* Light green background */
-  border-color: #d6e9c6; /* Darker green border */
+  background-color: #dff0d8;
  }
+
+  /* Styling for the correct answer */
+  .answer-correct {
+    background-color: #164b02;
+
+  }
+  .answer-incorrect {
+    background-color: #a41810;
+
+  }
