--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,15 +6,37 @@
 }
 
 
+body {
+background-color:  rgb(10, 15, 43);
+}
+
 .main-screen {
+  position: relative;
+  overflow: hidden;
   height: 100vh;
-  background-color: #EDCBA0;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  // background-color: rgb(10, 15, 43, 0.3);
+  // background-blend-mode: overlay;
   display: flex;
-justify-items: center;
-align-items: center;
+  justify-items: center;
+  align-items: center;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 0.5);
+    z-index: 1;
+  }
 }
 
 .start-screen {
   display: flex;
   flex-direction: column;
+  
 }
