--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -40,8 +40,39 @@ background-color:  rgb(10, 15, 43);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 20px;
+  padding: 3% 6%;
   text-align: center;
   background-color: #f3f3f3;
   z-index: 2;
+  box-shadow: $box-drop-shadow;
+  border: $text-color 2px solid;
+}
+
+.start-screen {
+  h1 {
+    font-family: $font-title;
+    font-size: 4rem;
+    color: $text-color;
+    margin-bottom: 22px;
+  }
+
+  p {
+    font-family: $font-text;
+    font-size: 1.5rem;
+    color: $text-color;
+    margin-bottom: 40px;
+  }
+
+  button {
+    font-family: $font-text;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: $button-text-color;
+    background-color: $main-button-color;
+    border: none;
+    border-radius: 15px;
+    margin: auto;
+    padding: 5px 35px;
+    text-shadow: $button-text-shadow;
+}
 }
