--- a/src/styles/_QA.scss
+++ b/src/styles/_QA.scss
@@ -1,10 +1,37 @@
+.QA{
+  width: 50vw;
+  font-family: $QA-text;
+  color: $text-color;
+  font-weight: 400;
+  padding: 32px 0px;
+  // padding-bottom:20px;
+  border-bottom: 1px solid $lines-color;
+
+  h3 {
+  text-align: left;
+  margin-left: 10px;
+  margin-bottom: 16px;
+  }
+
+  ul {
+    display: flex;
+    padding: 0;
+  }
+
+  li {
+    list-style: none;
+    padding: 10px 16px;
+    margin: 5px 10px;
+  }
+}
+
 /* Default styling for answers */
 .answer {
   cursor: pointer;
   padding: 10px;
   margin: 5px 0;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 2px solid $lines-color;
+  border-radius: 8px;
  }
 
  /* Styling for the selected answer */
