--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@
 
 // Colors
 $text-color: #072E68;
+$lines-color: #072e6830;
 $background-box-color: #ECF6FA;
 $main-button-color: #C86F4E;
 $button-text-color: #FFF7F4;
@@ -12,6 +13,7 @@ $answer-selected-color: rgba(8, 66, 201, 0.27);
 // Typography
 $font-title: 'Macondo Swash Caps', cursive;
 $font-text: 'Mako', sans-serif;
+$QA-text: 'League Spartan', sans-serif;
 
 // shadows
 $button-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
