--- a/src/styles/_QA.scss
+++ b/src/styles/_QA.scss
@@ -1,17 +1,18 @@
-.QA{
-  width: 50vw;
+.QA {
+  // width: 50vw;
   font-family: $QA-text;
   color: $text-color;
   font-weight: 400;
   padding: 32px 0px;
-  // padding-bottom:20px;
   border-bottom: 1px solid $lines-color;
 
   h3 {
   text-align: left;
   margin-left: 10px;
   margin-bottom: 16px;
-  }
+  font-weight:500;
+  font-size:1.3em;
+}
 
   ul {
     display: flex;
@@ -22,6 +23,7 @@
     list-style: none;
     padding: 10px 16px;
     margin: 5px 10px;
+    font-size: 1.1em;
   }
 }
 
