--- a/src/styles/_QA.scss
+++ b/src/styles/_QA.scss
@@ -30,23 +30,28 @@
 /* Default styling for answers */
 .answer {
   cursor: pointer;
+  text-align: center;
   padding: 10px;
   margin: 5px 0;
   border: 2px solid $lines-color;
   border-radius: 8px;
  }
 
- /* Styling for the selected answer */
+ /* Styling for the selected and checked answers */
  .answer-selected {
-  background-color: #dff0d8;
+  background-color: rgba(8, 86, 201, 0.27);
  }
 
-  /* Styling for the correct answer */
-  .answer-correct {
-    background-color: #164b02;
-
-  }
-  .answer-incorrect {
-    background-color: #a41810;
-
-  }
+.correct-answer {
+  border: 2px solid $answer-correct-color;
+}
+.correct {
+  background-color: $answer-correct-color;
+  border: 2px solid $answer-correct-color;
+  color: #e5eee6;
+  font-weight: 600;
+}
+.incorrect {
+  background-color: $answer-incorrect-color;
+  border: 2px solid $answer-incorrect-color-border;
+}
