--- a/src/styles/_QA.scss
+++ b/src/styles/_QA.scss
@@ -28,25 +28,47 @@
 }
 
 /* Default styling for answers */
-.answer {
-  cursor: pointer;
+
+@mixin answer-styles {
+  text-align: center;
   padding: 10px;
   margin: 5px 0;
   border: 2px solid $lines-color;
   border-radius: 8px;
  }
 
- /* Styling for the selected answer */
- .answer-selected {
-  background-color: #dff0d8;
+ .answer {
+  @include answer-styles;
+  cursor: pointer;
  }
 
-  /* Styling for the correct answer */
-  .answer-correct {
-    background-color: #164b02;
+ .answer-selected {
+  @include answer-styles;
+  background-color: rgba(8, 86, 201, 0.27);
+ }
 
-  }
-  .answer-incorrect {
-    background-color: #a41810;
+.correct-answer {
+  @include answer-styles;
+  border: 2px solid $answer-correct-color;
+  cursor: default;
+}
 
-  }
+.answer-checked {
+  @include answer-styles;
+  cursor: default;
+}
+
+.correct {
+  @include answer-styles;
+  background-color: $answer-correct-color;
+  border: 2px solid $answer-correct-color;
+  color: #e5eee6;
+  font-weight: 600;
+  cursor: default;
+}
+.incorrect {
+  @include answer-styles;
+  background-color: $answer-incorrect-color;
+  border: 2px solid $answer-incorrect-color-border;
+  cursor: default;
+}
